--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,23 @@
-body{
-  padding:0px;
-  margin: 0px;
-  /* cursor: none; */
+html, body {
+  margin: 0;
+  padding: 0;
   font-family: 'Montserrat', sans-serif;
-      background-color: #f5f5f5 ;
+  background-color: #f5f5f5;
+  height: 100%;
+  /* overflow-x: hidden; */
 }
 
-@media (max-width: 600px) {
-  .topBar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-
-/* navbar */
-
-
-/* end navbar */
-
-
-
-
-
-/* end cursor animation */
+.page-wrapper > main {
+  flex: 1;
+}
